@@ -1,5 +1,14 @@
 2008-02-28  Don Porter	<dgp@users.sourceforge.net>
 
+	* generic/tclResult.c (Tcl_SetReturnOptions):	Revised the refcount
+	management of Tcl_SetReturnOptions to become that of a conventional
+	Consumer routine.  Thanks to Peter Spjuth for pointing out the
+	difficulties calling Tcl_SetReturnOptions with non-0-count value for
+	options.
+	* generic/tclExecute.c (INST_RETURN_STK): Revised the one caller
+	within Tcl itself which passes a non-0-count value to
+	Tcl_SetReturnOptions().
+
 	* generic/tclBasic.c (Tcl_AppendObjToErrorInfo):	Revised the
 	refcount management of Tcl_AppendObjToErrorInfo to become that of
 	a conventional Consumer routine.  This preserves the ease of use
